--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="/src/styles/style.css">
 	<title>Europedia</title>
 </head>
 <body>
-  <h1>
-  	What do you know about European coutries?
-  </h1>
+  <div class="container"></div>
 </body>	
+  <scipt src="bundle.js"></scipt>
 </html>
