Fixed syntax error in index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="/src/styles/style.css">
-	<title>Europedia</title>
 </head>
 <body>
   <div class="container"></div>
 </body>	
-  <scipt src="bundle.js"></scipt>
+  <script src="/bundle.js"></script>
 </html>
